--- a/public/p/game.css
+++ b/public/p/game.css
@@ -1,5 +1,5 @@
 
-@import url("https://haylamday.com/css/font.css");
+@import url("");
 
 ::-webkit-scrollbar {display:none;}
 * {font-family:vuonghiep;}
