--- a/public/p/game.css
+++ b/public/p/game.css
@@ -1,5 +1,5 @@
 
-@import url("");
+@import url("https://yilansss.vercel.app/p/font.css");
 
 ::-webkit-scrollbar {display:none;}
 * {font-family:vuonghiep;}
